[gd_scene load_steps=25 format=2]

[ext_resource path="res://graphics/lab/MZW neu.jpg" type="Texture" id=1]
[ext_resource path="res://src/Camera2D.gd" type="Script" id=2]
[ext_resource path="res://graphics/lab/Logo_MZW.png" type="Texture" id=3]
[ext_resource path="res://graphics/TransparentButton.png" type="Texture" id=4]
[ext_resource path="res://src/rooms/Room_LB_MZW.gd" type="Script" id=5]
[ext_resource path="res://graphics/lab/MZW_slide1.png" type="Texture" id=6]
[ext_resource path="res://control_theme.tres" type="Theme" id=11]
[ext_resource path="res://font/besley/Besley-Bold.otf" type="DynamicFontData" id=12]
[ext_resource path="res://font/GidoleFont/Gidole-Regular.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://graphics/YellowBubble.png" type="Texture" id=15]
[ext_resource path="res://graphics/lab/backArrow.png" type="Texture" id=16]
[ext_resource path="res://graphics/lab/CheckButton.png" type="Texture" id=17]
[ext_resource path="res://graphics/lab/SelectionEuropa.png" type="Texture" id=18]
[ext_resource path="res://graphics/lab/SelectVerein.png" type="Texture" id=19]
[ext_resource path="res://graphics/lab/Europa.png" type="Texture" id=20]
[ext_resource path="res://graphics/lab/Verein.png" type="Texture" id=21]
[ext_resource path="res://graphics/lab/Raetsel.png" type="Texture" id=22]

[sub_resource type="DynamicFont" id=1]
size = 33
use_filter = true
extra_spacing_top = -25
extra_spacing_bottom = -25
extra_spacing_char = -10
extra_spacing_space = -5
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=3]
size = 32
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.195, 0.53, 1 )
colors = PoolColorArray( 0.827148, 0.355063, 0.193863, 0.266667, 1, 0.40567, 0.199219, 0.768627, 0.847059, 0.466667, 0.258824, 0.92549 )

[sub_resource type="DynamicFont" id=5]
size = 266
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="Animation" id=6]
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer3/Slides:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer3/Slides:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
length = 2.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "zoomToSlideShow"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "instantZoomOut"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer3/Slides:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer3/Slides:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer3/Slides/EuropeCardFillIn:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "ShowNumber"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/NumberUnfocus:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/CPUParticles2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Number:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/NumberUnfocus:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/CPUParticles2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer/Number:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.1, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="RoomMZW" type="Node2D"]
script = ExtResource( 5 )

[node name="MZW_Background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 0.783696, 0.783696 )
texture = ExtResource( 1 )

[node name="Logo_MZW" type="Sprite" parent="MZW_Background"]
position = Vector2( -403.658, 191.992 )
scale = Vector2( 0.25297, 0.25297 )
texture = ExtResource( 3 )

[node name="LogoPress" type="TouchScreenButton" parent="MZW_Background/Logo_MZW"]
position = Vector2( -503.304, -323.552 )
scale = Vector2( 1.26401, 1.08239 )
normal = ExtResource( 4 )

[node name="SlideshowPress" type="TouchScreenButton" parent="MZW_Background"]
position = Vector2( -93.3646, -249.027 )
scale = Vector2( 0.535042, 0.482872 )
normal = ExtResource( 4 )

[node name="ShowInfos" type="TouchScreenButton" parent="MZW_Background"]
position = Vector2( -154.613, 114.634 )
scale = Vector2( 0.338856, 0.276584 )
normal = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 512, 300 )
current = true
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="CanvasLayer3" type="CanvasLayer" parent="."]

[node name="Slides" type="ColorRect" parent="CanvasLayer3"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EuropeCardFillIn" type="Sprite" parent="CanvasLayer3/Slides"]
visible = false
position = Vector2( 512, 300 )
scale = Vector2( 0.810953, 0.810953 )
texture = ExtResource( 6 )

[node name="fill1" type="LineEdit" parent="CanvasLayer3/Slides/EuropeCardFillIn"]
margin_left = -223.194
margin_top = -291.016
margin_right = -186.194
margin_bottom = -256.016
theme = ExtResource( 11 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
max_length = 1
placeholder_text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fill2" type="LineEdit" parent="CanvasLayer3/Slides/EuropeCardFillIn"]
margin_left = -307.626
margin_top = -136.144
margin_right = -270.626
margin_bottom = -101.144
theme = ExtResource( 11 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
max_length = 1
placeholder_text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fill3" type="LineEdit" parent="CanvasLayer3/Slides/EuropeCardFillIn"]
margin_left = 61.4829
margin_top = 128.828
margin_right = 98.4829
margin_bottom = 163.828
theme = ExtResource( 11 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
max_length = 1
placeholder_text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fill4" type="LineEdit" parent="CanvasLayer3/Slides/EuropeCardFillIn"]
margin_left = -464.334
margin_top = 186.357
margin_right = -427.334
margin_bottom = 221.357
theme = ExtResource( 11 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
max_length = 1
placeholder_text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckEnteredRow" type="TouchScreenButton" parent="CanvasLayer3/Slides/EuropeCardFillIn"]
position = Vector2( 529.342, 111.887 )
scale = Vector2( 0.129111, 0.129111 )
normal = ExtResource( 17 )

[node name="TextureButton" type="TextureButton" parent="CanvasLayer3/Slides/EuropeCardFillIn"]
margin_left = 408.089
margin_top = 208.738
margin_right = 1531.09
margin_bottom = 861.738
rect_scale = Vector2( 0.2, 0.25 )
texture_normal = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quiz" type="Sprite" parent="CanvasLayer3/Slides"]
visible = false
position = Vector2( 507.445, 297.351 )
scale = Vector2( 0.881156, 0.881156 )
texture = ExtResource( 22 )

[node name="_4_fname" type="LineEdit" parent="CanvasLayer3/Slides/Quiz"]
margin_left = -1.0
margin_top = 70.0
margin_right = 139.0
margin_bottom = 103.0
rect_scale = Vector2( 0.8, 0.8 )
theme = ExtResource( 11 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_4_lname" type="LineEdit" parent="CanvasLayer3/Slides/Quiz"]
margin_left = -1.0
margin_top = 122.446
margin_right = 138.0
margin_bottom = 155.446
rect_scale = Vector2( 0.8, 0.8 )
theme = ExtResource( 11 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_4_country" type="LineEdit" parent="CanvasLayer3/Slides/Quiz"]
margin_left = -1.0
margin_top = 172.086
margin_right = 139.0
margin_bottom = 207.086
rect_scale = Vector2( 0.8, 0.8 )
theme = ExtResource( 11 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_1_fname" type="LineEdit" parent="CanvasLayer3/Slides/Quiz"]
margin_left = 128.0
margin_top = 69.4173
margin_right = 269.0
margin_bottom = 102.417
rect_scale = Vector2( 0.8, 0.8 )
theme = ExtResource( 11 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_1_lname" type="LineEdit" parent="CanvasLayer3/Slides/Quiz"]
margin_left = 126.0
margin_top = 119.863
margin_right = 270.0
margin_bottom = 152.863
rect_scale = Vector2( 0.8, 0.8 )
theme = ExtResource( 11 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_1_country" type="LineEdit" parent="CanvasLayer3/Slides/Quiz"]
margin_left = 126.0
margin_top = 172.0
margin_right = 275.0
margin_bottom = 211.0
rect_scale = Vector2( 0.8, 0.8 )
theme = ExtResource( 11 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_2_fname" type="LineEdit" parent="CanvasLayer3/Slides/Quiz"]
margin_left = 265.0
margin_top = 65.8345
margin_right = 412.0
margin_bottom = 99.8345
rect_scale = Vector2( 0.8, 0.8 )
theme = ExtResource( 11 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_2_lname" type="LineEdit" parent="CanvasLayer3/Slides/Quiz"]
margin_left = 266.0
margin_top = 119.863
margin_right = 409.0
margin_bottom = 152.863
rect_scale = Vector2( 0.8, 0.8 )
theme = ExtResource( 11 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_2_country" type="LineEdit" parent="CanvasLayer3/Slides/Quiz"]
margin_left = 265.0
margin_top = 169.504
margin_right = 411.0
margin_bottom = 205.504
rect_scale = Vector2( 0.8, 0.8 )
theme = ExtResource( 11 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_3_fname" type="LineEdit" parent="CanvasLayer3/Slides/Quiz"]
margin_left = 395.806
margin_top = 66.8345
margin_right = 537.806
margin_bottom = 102.835
rect_scale = Vector2( 0.8, 0.8 )
theme = ExtResource( 11 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_3_lname" type="LineEdit" parent="CanvasLayer3/Slides/Quiz"]
margin_left = 396.0
margin_top = 118.475
margin_right = 538.0
margin_bottom = 157.475
rect_scale = Vector2( 0.8, 0.8 )
theme = ExtResource( 11 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_3_country" type="LineEdit" parent="CanvasLayer3/Slides/Quiz"]
margin_left = 395.0
margin_top = 171.698
margin_right = 539.0
margin_bottom = 205.698
rect_scale = Vector2( 0.8, 0.8 )
theme = ExtResource( 11 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selection" type="Node2D" parent="CanvasLayer3/Slides"]
visible = false

[node name="SelectionVerein" type="TextureButton" parent="CanvasLayer3/Slides/Selection"]
margin_left = 96.1665
margin_top = 258.558
margin_right = 689.167
margin_bottom = 511.558
rect_scale = Vector2( 0.86, 0.86 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectionEuropa" type="TextureButton" parent="CanvasLayer3/Slides/Selection"]
margin_left = 623.668
margin_top = 46.669
margin_right = 957.668
margin_bottom = 341.669
rect_scale = Vector2( 0.86, 0.86 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Europa" type="Sprite" parent="CanvasLayer3/Slides"]
visible = false
position = Vector2( 526.057, 299.772 )
scale = Vector2( 0.927969, 0.927969 )
texture = ExtResource( 20 )

[node name="Verein" type="Sprite" parent="CanvasLayer3/Slides"]
visible = false
position = Vector2( 518.147, 275.691 )
texture = ExtResource( 21 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NumberUnfocus" type="ColorRect" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.74902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 512, 300 )
amount = 50
lifetime = 6.0
preprocess = 5.0
speed_scale = 0.4
texture = ExtResource( 15 )
emission_shape = 1
emission_sphere_radius = 128.0
gravity = Vector2( 0, 5 )
orbit_velocity = 0.02
orbit_velocity_random = 0.62
radial_accel = 32.48
tangential_accel = 2.86
angle = 221.5
angle_random = 0.76
scale_amount = 0.05
scale_amount_random = 0.72
color_ramp = SubResource( 4 )

[node name="Number" type="Label" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0.854902, 0.294118, 1 )
custom_colors/font_color_shadow = Color( 1, 0.466667, 0, 0.34902 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "7"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 4

[node name="BackButton" type="TouchScreenButton" parent="CanvasLayer2"]
position = Vector2( 116.657, 589.809 )
rotation = 3.14159
scale = Vector2( 0.16, 0.126 )
normal = ExtResource( 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/CloseSlideshow = SubResource( 6 )
anims/OpenSlideshow = SubResource( 7 )
anims/ShowNumber = SubResource( 8 )

[node name="Tween" type="Tween" parent="."]
[connection signal="released" from="MZW_Background/Logo_MZW/LogoPress" to="." method="_on_LogoPress_released"]
[connection signal="released" from="MZW_Background/SlideshowPress" to="." method="_on_SlideshowPress_released"]
[connection signal="released" from="MZW_Background/ShowInfos" to="." method="_on_ShowInfos_released"]
[connection signal="focus_entered" from="CanvasLayer3/Slides/EuropeCardFillIn/fill1" to="." method="_on_fill1_focus_entered"]
[connection signal="text_changed" from="CanvasLayer3/Slides/EuropeCardFillIn/fill1" to="." method="_on_fill1_text_changed"]
[connection signal="focus_entered" from="CanvasLayer3/Slides/EuropeCardFillIn/fill2" to="." method="_on_fill2_focus_entered"]
[connection signal="text_changed" from="CanvasLayer3/Slides/EuropeCardFillIn/fill2" to="." method="_on_fill2_text_changed"]
[connection signal="focus_entered" from="CanvasLayer3/Slides/EuropeCardFillIn/fill3" to="." method="_on_fill3_focus_entered"]
[connection signal="text_changed" from="CanvasLayer3/Slides/EuropeCardFillIn/fill3" to="." method="_on_fill3_text_changed"]
[connection signal="focus_entered" from="CanvasLayer3/Slides/EuropeCardFillIn/fill4" to="." method="_on_fill4_focus_entered"]
[connection signal="text_changed" from="CanvasLayer3/Slides/EuropeCardFillIn/fill4" to="." method="_on_fill4_text_changed"]
[connection signal="released" from="CanvasLayer3/Slides/EuropeCardFillIn/CheckEnteredRow" to="." method="_on_CheckEnteredRow_released"]
[connection signal="pressed" from="CanvasLayer3/Slides/EuropeCardFillIn/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="CanvasLayer3/Slides/Selection/SelectionVerein" to="." method="_on_SelectionVerein_pressed"]
[connection signal="pressed" from="CanvasLayer3/Slides/Selection/SelectionEuropa" to="." method="_on_SelectionEuropa_pressed"]
[connection signal="released" from="CanvasLayer2/BackButton" to="." method="_on_BackButton_released"]
